--- a/Sniffer/View/IdsUC.xaml
+++ b/Sniffer/View/IdsUC.xaml
@@ -3,12 +3,14 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:Sniffer.View"
+             xmlns:local="clr-namespace:Sniffer.ViewModel"
              mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300">
+             d:DesignHeight="300" d:DesignWidth="300"
+             d:DataContext="{d:DesignInstance local:IdsViewModel, IsDesignTimeCreatable=True}">
     <Grid>
         <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center">
             <TextBlock Text="Ещё не сделано:(" FontSize="18" />
         </StackPanel>
+        <Button Content="Создать НС" HorizontalAlignment="Right" Margin="0,56,90,0" Width="130" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" MinWidth="130" MinHeight="26" Height="26" VerticalAlignment="Top" Command="{Binding CreateNN}"/>
     </Grid>
 </UserControl>
